--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   <body>
     <div class="sidebar">
       <img src="logo.png" alt="Logo" class="logo" />
-
+      <div class="feauture__container">
+        <button class="btn delete__all hidden">Delete All</button>
+      </div>
       <ul class="workouts">
         <form class="form hidden">
           <div class="form__row">
